--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christoph Diehl</title>
+    <link rel="shortcut icon" type="image/png" href="static/images/avatar.jpg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
@@ -335,7 +336,7 @@
                     <dt><a href="public/bugs/TA-210603.html">TA-2003-0621</a></dt>
                     <dd>Twilight WebServer v1.3.3.0 - Memory corruption</dd>
                     <dt><a href="public/bugs/TA-180603.html">TA-2003-0618</a></dt>
-                    <dd>Armida Databased Web Server v1.0</dd>
+                    <dd>Armida Web Server v1.0 - Memory corruption</dd>
                     <dt><a href="public/bugs/TA-250403.html">TA-2003-0527</a></dt>
                     <dd>Abyss WebServer X1 - Directory traversal</dd>
                     <dt><a href="public/bugs/TA-250403.html">TA-2003-0425</a></dt>
