--- a/public/bugs/TA-150104.html
+++ b/public/bugs/TA-150104.html
@@ -7,9 +7,9 @@
 
 <body alink="#6B8E23" link="#6B8E23" vlink="#6B8E23" bgcolor="#ffffff">
 <table width="60%" border="0" cellspacing="2" cellpadding="0">
-  <tr bgcolor="#D8E7C2"> 
-    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit 
-      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security 
+  <tr bgcolor="#D8E7C2">
+    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit
+      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security
       Advisory</font></font></strong></font></td>
     <td width="24%"><div align="right"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><strong>TA-150104&nbsp;</strong></font></font></div></td>
   </tr>
@@ -18,32 +18,32 @@
 </strong><font color="#333333"><br>
 </font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp; 
+  <tr>
+    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp;
         </font></div></td>
     <td width="56%"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Medium/High</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Application:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Xtreme ASP Photo Gallery 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Xtreme ASP Photo Gallery
       2.0</font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Platform:&nbsp;</strong></font></div></td>
     <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Windows</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Class:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Input 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Input
       Validation Error</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release
         Date:</strong>&nbsp;</font></div></td>
     <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">January 15th, 2004</font></td>
   </tr>
-  <tr> 
-    <td height="19"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp; 
+  <tr>
+    <td height="19"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp;
         </strong></font></div></td>
     <td><font size="2" face="Arial, Helvetica, sans-serif"><a href="http://www.pensacolawebdesigns.com/">http://www.pensacolawebdesigns.com/</a></font></td>
   </tr>
@@ -53,23 +53,23 @@
 <strong><font size="2">&#8226; </font>Overview</strong></font></font><font color="#333333"><br>
 </font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">XTREME ASP Photo Gallery 
-        is a photo gallery that allows easy photo management and complete administration 
-        via a web based interface. This interface offers many more features than 
-        conventional web based photo gallery's do. With XTREME ASP Photo Gallery, 
-        you can configure everything including colors, text styles, amount of 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">XTREME ASP Photo Gallery
+        is a photo gallery that allows easy photo management and complete administration
+        via a web based interface. This interface offers many more features than
+        conventional web based photo gallery's do. With XTREME ASP Photo Gallery,
+        you can configure everything including colors, text styles, amount of
         imaged displayed per page and much more.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Details</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="32" valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Xtreme 
-        ASP Photo Gallery Version 2.0 is prone to a common SQL injection vulnerability. 
-        The problem occurs when handling user-supplied username and password data 
+  <tr>
+    <td height="32" valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Xtreme
+        ASP Photo Gallery Version 2.0 is prone to a common SQL injection vulnerability.
+        The problem occurs when handling user-supplied username and password data
         supplied to authentication procedures.</font><font size="2" face="Arial, Helvetica, sans-serif"><br>
         <br>
         <em><font color="#333333">Example</font></em><font color="#333333">:</font></font><br>
@@ -85,58 +85,58 @@
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Recommendation</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"> 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">
         No solution for the moment. </font> </div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226; 
-</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong> 
+</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226;
+</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong>
 <strong>Response</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        vendor has reportedly been notified to this report.</font></div></td>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        vendor has been notified to this report.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Disclaimer</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        information within this paper may change without notice. Use of this information 
-        constitutes acceptance for use in an 'AS IS' condition. There are 'NO' 
-        warranties with regard to this information. In no event shall the author 
-        be liable for any damages whatsoever arising out of or in connection with 
-        the use or spread of this information. Any use of this information is 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        information within this paper may change without notice. Use of this information
+        constitutes acceptance for use in an 'AS IS' condition. There are 'NO'
+        warranties with regard to this information. In no event shall the author
+        be liable for any damages whatsoever arising out of or in connection with
+        the use or spread of this information. Any use of this information is
         at the user's own risk.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Additional information</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This 
-      vulnerability have been found and researched by:<br>
+  <tr>
+    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This
+      vulnerability has been found and researched by:<br>
       <br>
       posidron <a href="mailto:%20posidron@tripbit.org">posidron@tripbit.org</a></font><br>
-      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo 
+      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo
       <a href="mailto:%20rushjo@tripbit.org">rushjo@tripbit.org</a></font></td>
   </tr>
 </table>
 <font color="#333333"><br>
 <strong><font size="2" face="Arial, Helvetica, sans-serif">&#8226; Availability</font></strong><font size="2" face="Arial, Helvetica, sans-serif"><br>
-</font></font> 
+</font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You 
-        can find the last version of this warning under the following URL: <br>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You
+        can find the latest version of this warning under the following URL: <br>
         <br>
         <a href="http://www.tripbit.org/advisories/TA-200303.html">http://www.tripbit.org/advisories/TA-150104.html</a><br>
         </font></div></td>
