--- a/public/bugs/TA-270503.html
+++ b/public/bugs/TA-270503.html
@@ -7,9 +7,9 @@
 
 <body alink="#6B8E23" link="#6B8E23" vlink="#6B8E23" bgcolor="#ffffff">
 <table width="60%" border="0" cellspacing="2" cellpadding="0">
-  <tr bgcolor="#D8E7C2"> 
-    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit 
-      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security 
+  <tr bgcolor="#D8E7C2">
+    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit
+      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security
       Advisory</font></font></strong></font></td>
     <td width="24%"><div align="right"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><strong>TA-270503&nbsp;</strong></font></font></div></td>
   </tr>
@@ -18,34 +18,34 @@
 </strong><font color="#333333"><br>
 </font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp; 
+  <tr>
+    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp;
         </font></div></td>
     <td width="56%"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Medium/High</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Application:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Abyss Web Server X1 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Abyss Web Server X1
       Update 1 v1.1.5</font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Platform:&nbsp;</strong></font></div></td>
     <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Windows</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif"><strong>Class:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Directory Traversal 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Directory Traversal
       Vulnerability</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release
         Date:</strong>&nbsp;</font></div></td>
     <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">May 27th, 2003</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp; 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp;
         </strong></font></div></td>
-    <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><a href="http://aprelium.com">http://aprelium.com 
+    <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><a href="http://aprelium.com">http://aprelium.com
       </a> </font></font></td>
   </tr>
 </table>
@@ -54,21 +54,20 @@
 <strong><font size="2">&#8226; </font>Overview</strong></font></font><font color="#333333"><br>
 </font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Abyss 
-        is a very good free and tiny webserver that not only has a lot of functions 
-        but it also run on both Windows and Linux systems.</font></div></td>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Abyss
+        is a free and tiny webserver runs on both Windows and Linux systems.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Details</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Possible 
-        bug or misconfiguration problem in the web server that allow unauthorized 
-        remote users to gain information about the web server's host machine, 
-        that will allow them to break into the system.<br>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Possible
+        bug or misconfiguration problem in the web server that allow unauthorized
+        remote users to gain information about the web server's host machine,
+        that will allow them to compromise the system.<br>
         <br>
         <em>Example</em>: <br>
         <br>
@@ -78,59 +77,59 @@
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Recommendation</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"> 
-        No solution for the moment.</font><font size="2" face="Arial, Helvetica, sans-serif"> 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">
+        No solution for the moment.</font><font size="2" face="Arial, Helvetica, sans-serif">
         </font> </div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226; 
-</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong> 
+</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226;
+</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong>
 <strong>Response</strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        vendor has reportedly been notified but no answer to this report.</font></div></td>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        vendor has been notified but no answer to this report.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Disclaimer</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        information within this paper may change without notice. Use of this information 
-        constitutes acceptance for use in an 'AS IS' condition. There are 'NO' 
-        warranties with regard to this information. In no event shall the author 
-        be liable for any damages whatsoever arising out of or in connection with 
-        the use or spread of this information. Any use of this information is 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        information within this paper may change without notice. Use of this information
+        constitutes acceptance for use in an 'AS IS' condition. There are 'NO'
+        warranties with regard to this information. In no event shall the author
+        be liable for any damages whatsoever arising out of or in connection with
+        the use or spread of this information. Any use of this information is
         at the user's own risk.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Additional information</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This 
-      vulnerability have been found and researched by:<br>
+  <tr>
+    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This
+      vulnerability has been found and researched by:<br>
       <br>
       posidron <a href="mailto:%20posidron@tripbit.org">posidron@tripbit.org</a></font><br>
-      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo 
+      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo
       <a href="mailto:%20rushjo@tripbit.org">rushjo@tripbit.org</a></font></td>
   </tr>
 </table>
 <font color="#333333"><br>
 <strong><font size="2" face="Arial, Helvetica, sans-serif">&#8226; Availability</font></strong><font size="2" face="Arial, Helvetica, sans-serif"><br>
-</font></font> 
+</font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You 
-        can find the last version of this warning under the following URL: <br>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You
+        can find the latest version of this warning under the following URL: <br>
         <br>
         <a href="http://www.tripbit.org/advisories/TA-200303.html">http://www.tripbit.org/advisories/TA-270503.html</a></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
         </font></div></td>
