--- a/public/bugs/TA-180603.html
+++ b/public/bugs/TA-180603.html
@@ -7,9 +7,9 @@
 
 <body alink="#6B8E23" link="#6B8E23" vlink="#6B8E23" bgcolor="#ffffff">
 <table width="60%" border="0" cellspacing="2" cellpadding="0">
-  <tr bgcolor="#D8E7C2"> 
-    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit 
-      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security 
+  <tr bgcolor="#D8E7C2">
+    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit
+      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security
       Advisory</font></font></strong></font></td>
     <td width="24%"><div align="right"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><strong>TA-180603&nbsp;</strong></font></font></div></td>
   </tr>
@@ -18,32 +18,32 @@
 </strong><font color="#333333"><br>
 </font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp; 
+  <tr>
+    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp;
         </font></div></td>
     <td width="56%"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Medium/High</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Application:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Armida Databased Web 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Armida Databased Web
       Server v1.0</font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Platform:&nbsp;</strong></font></div></td>
     <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Windows</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif"><strong>Class:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Insufficient Boundary 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Insufficient Boundary
       Checking</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release
         Date:</strong>&nbsp;</font></div></td>
     <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">June 18th, 2003</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp; 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp;
         </strong></font></div></td>
     <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><a href="http://www.frassetto.it">http://www.frassetto.it</a></font></td>
   </tr>
@@ -53,26 +53,26 @@
 <strong><font size="2">&#8226; </font>Overview</strong></font></font><font color="#333333"><br>
 </font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">A 
-        HTTP server designed for Internet and intranet installations. It supports 
-        direct database access without CGI, multiple host (virtual or port-linked) 
-        and access security. Support many advanced features that can allow visitors 
-        to add or change database entries. Accounts using username/password access 
-        can be set up with the ability to decrement credits from the user when 
-        defined pages are accessed. Auto-install and remove. On-line documentation 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">A
+        HTTP server designed for Internet and intranet installations. It supports
+        direct database access without CGI, multiple host (virtual or port-linked)
+        and access security. Support many advanced features that can allow visitors
+        to add or change database entries. Accounts using username/password access
+        can be set up with the ability to decrement credits from the user when
+        defined pages are accessed. Auto-install and remove. On-line documentation
         and support.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Details</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        Armida Databased Web Server has an vulnerability in the standard configuration. 
-        This allows an attacker to crash the server by writing more than 5000 
-        bytes behind the hostname's url. </font><font size="2" face="Arial, Helvetica, sans-serif"><br>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        Armida Databased Web Server has a vulnerability in the standard configuration.
+        This allows an attacker to crash the server by making a request with more than 5000
+        bytes. </font><font size="2" face="Arial, Helvetica, sans-serif"><br>
         <br>
         <em><font color="#333333">Example</font></em><font color="#333333">: </font><a href="http://host.com/AAAAA"><br>
         <br>
@@ -82,65 +82,65 @@
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Recommendation</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"> 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">
         &lt;QUOTE&gt;</font> <font size="2" face="Arial, Helvetica, sans-serif"><br>
-        <font color="#333333">In the &quot;armida.ini&quot; file, in the section 
-        &quot;[armida]&quot;, </font></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">set 
+        <font color="#333333">In the &quot;armida.ini&quot; file, in the section
+        &quot;[armida]&quot;, </font></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">set
         Pirati=20</font><font size="2" face="Arial, Helvetica, sans-serif"><br>
-        </font><font size="2" face="Arial, Helvetica, sans-serif"> <font color="#333333">This 
+        </font><font size="2" face="Arial, Helvetica, sans-serif"> <font color="#333333">This
         will fix the problem.</font></font><font size="2" face="Arial, Helvetica, sans-serif"></font><font size="2" face="Arial, Helvetica, sans-serif"><br>
-        <font color="#333333">&lt;/QUOTE&gt;</font></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"> 
+        <font color="#333333">&lt;/QUOTE&gt;</font></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">
         </font> </div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226; 
-</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong> 
+</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226;
+</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong>
 <strong>Response</strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
         vendor has been notified.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Disclaimer</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        information within this paper may change without notice. Use of this information 
-        constitutes acceptance for use in an 'AS IS' condition. There are 'NO' 
-        warranties with regard to this information. In no event shall the author 
-        be liable for any damages whatsoever arising out of or in connection with 
-        the use or spread of this information. Any use of this information is 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        information within this paper may change without notice. Use of this information
+        constitutes acceptance for use in an 'AS IS' condition. There are 'NO'
+        warranties with regard to this information. In no event shall the author
+        be liable for any damages whatsoever arising out of or in connection with
+        the use or spread of this information. Any use of this information is
         at the user's own risk.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Additional information</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This 
-      vulnerability have been found and researched by:<br>
+  <tr>
+    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This
+      vulnerability has been found and researched by:<br>
       <br>
       posidron <a href="mailto:%20posidron@tripbit.org">posidron@tripbit.org</a></font><br>
-      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo 
+      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo
       <a href="mailto:%20rushjo@tripbit.org">rushjo@tripbit.org</a></font></td>
   </tr>
 </table>
 <font color="#333333"><br>
 <strong><font size="2" face="Arial, Helvetica, sans-serif">&#8226; Availability</font></strong><font size="2" face="Arial, Helvetica, sans-serif"><br>
-</font></font> 
+</font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You 
-        can find the last version of this warning under the following URL: <br>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You
+        can find the latest version of this warning under the following URL: <br>
         <br>
         <a href="http://www.tripbit.org/advisories/TA-200303.html">http://www.tripbit.org/advisories/TA-180603.html</a></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
         </font></div></td>
