--- a/public/bugs/TA-250503.html
+++ b/public/bugs/TA-250503.html
@@ -7,9 +7,9 @@
 
 <body alink="#6B8E23" link="#6B8E23" vlink="#6B8E23" bgcolor="#ffffff">
 <table width="60%" border="0" cellspacing="2" cellpadding="0">
-  <tr bgcolor="#D8E7C2"> 
-    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit 
-      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security 
+  <tr bgcolor="#D8E7C2">
+    <td width="76%" height="16"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>&nbsp;Tripbit
+      </strong></font><font color="#333333"><strong><font face="Arial, Helvetica, sans-serif"><font size="2">Security
       Advisory</font></font></strong></font></td>
     <td width="24%"><div align="right"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><strong>TA-250503&nbsp;</strong></font></font></div></td>
   </tr>
@@ -18,33 +18,33 @@
 </strong><font color="#333333"><br>
 </font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp; 
+  <tr>
+    <td width="44%"><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Severity:</strong>&nbsp;
         </font></div></td>
     <td width="56%"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Medium/High</font></font></td>
   </tr>
   <tr>
     <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Application:&nbsp;</strong></font></div></td>
-    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Pi3 Web Server 
+    <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Pi3 Web Server
       v2.0.2 Beta 1</font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><strong>Platform:&nbsp;</strong></font></font></div></td>
     <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2">Windows</font></font></td>
   </tr>
-  <tr> 
+  <tr>
     <td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif"><strong>Class:&nbsp;</strong></font></div></td>
     <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">Input Validation Error</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Release
         Date:</strong>&nbsp;</font></div></td>
     <td><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">May 25th, 2003</font></td>
   </tr>
-  <tr> 
-    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp; 
+  <tr>
+    <td><div align="right"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor:&nbsp;
         </strong></font></div></td>
-    <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><a href="http://pi3web.sourceforge.net/pi3web/">http://pi3web.sourceforge.net/pi3web/ 
+    <td><font color="#333333" face="Arial, Helvetica, sans-serif"><font size="2"><a href="http://pi3web.sourceforge.net/pi3web/">http://pi3web.sourceforge.net/pi3web/
       </a> </font></font></td>
   </tr>
 </table>
@@ -53,31 +53,31 @@
 <strong><font size="2">&#8226; </font>Overview</strong></font></font><font color="#333333"><br>
 </font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        Pi3 Component architecture is a high performance server based suite of 
-        libraries to enable rapid development of server software. One of the components 
-        available for this architecture is Pi3Web. A buffer overflow vulnerability 
-        in the product allows remote attackers to crash the server by issuing 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        Pi3 Component architecture is a high performance server based suite of
+        libraries to enable rapid development of server software. One of the components
+        available for this architecture is Pi3Web. A buffer overflow vulnerability
+        in the product allows remote attackers to crash the server by issuing
         a malformed request.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Details</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        problem lies in the Directory Index with &quot;Name&quot; as Hyperlink 
-        Column. If following configuration is in use, allow this a remote attacker 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        problem lies in the Directory Index with &quot;Name&quot; as Hyperlink
+        Column. If following configuration is in use, allow this a remote attacker
         to crash the server by issuing this malformed request:<br>
         <br>
         <em>Example</em>: <br>
         <br>
-        <a href="http://host.com/%3C/?SortName=A">http://host.com/&lt;/?SortName=A</a> 
+        <a href="http://host.com/%3C/?SortName=A">http://host.com/&lt;/?SortName=A</a>
         <br>
         <br>
-        The administrator of the server must use one of the following directory 
+        The administrator of the server must use one of the following directory
         layouts:<br>
         <br>
         <em> General Layout</em><br>
@@ -97,62 +97,62 @@
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Recommendation</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"> 
-        Download the new Version, which is available on Sourceforge.</font> 
-        <p><font size="2" face="Arial, Helvetica, sans-serif"><a href="http://osdn.dl.sourceforge.net/sourceforge/pi3web/Pi3Web-x86Win32-2_0_2-beta2.exe">http://osdn.dl.sourceforge.net/sourceforge/pi3web/Pi3Web-x86Win32-2_0_2-beta2.exe</a> 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">
+        Download the new Version, which is available on Sourceforge.</font>
+        <p><font size="2" face="Arial, Helvetica, sans-serif"><a href="http://osdn.dl.sourceforge.net/sourceforge/pi3web/Pi3Web-x86Win32-2_0_2-beta2.exe">http://osdn.dl.sourceforge.net/sourceforge/pi3web/Pi3Web-x86Win32-2_0_2-beta2.exe</a>
           </font> </p>
       </div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226; 
-</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong> 
+</font><font color="#333333" size="2"><strong><font face="Arial, Helvetica, sans-serif">&#8226;
+</font></strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><strong>Vendor</strong>
 <strong>Response</strong></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        vendor has reportedly been notified and fix the bug in Version 2.0.2 Beta 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        vendor has been notified and fix the bug in Version 2.0.2 Beta
         1.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Disclaimer</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The 
-        information within this paper may change without notice. Use of this information 
-        constitutes acceptance for use in an 'AS IS' condition. There are 'NO' 
-        warranties with regard to this information. In no event shall the author 
-        be liable for any damages whatsoever arising out of or in connection with 
-        the use or spread of this information. Any use of this information is 
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">The
+        information within this paper may change without notice. Use of this information
+        constitutes acceptance for use in an 'AS IS' condition. There are 'NO'
+        warranties with regard to this information. In no event shall the author
+        be liable for any damages whatsoever arising out of or in connection with
+        the use or spread of this information. Any use of this information is
         at the user's own risk.</font></div></td>
   </tr>
 </table>
 <font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
 <strong>&#8226; Additional information</strong><br>
-</font> 
+</font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This 
-      vulnerability have been found and researched by:<br>
+  <tr>
+    <td valign="top"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">This
+      vulnerability has been found and researched by:<br>
       <br>
       posidron <a href="mailto:%20posidron@tripbit.org">posidron@tripbit.org</a></font><br>
-      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo 
+      <font color="#333333" size="2" face="Arial, Helvetica, sans-serif">rushjo
       <a href="mailto:%20rushjo@tripbit.org">rushjo@tripbit.org</a></font></td>
   </tr>
 </table>
 <font color="#333333"><br>
 <strong><font size="2" face="Arial, Helvetica, sans-serif">&#8226; Availability</font></strong><font size="2" face="Arial, Helvetica, sans-serif"><br>
-</font></font> 
+</font></font>
 <table width="60%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You 
-        can find the last version of this warning under the following URL: <br>
+  <tr>
+    <td valign="top"><div align="justify"><font color="#333333" size="2" face="Arial, Helvetica, sans-serif">You
+        can find the latest version of this warning under the following URL: <br>
         <br>
         <a href="http://www.tripbit.org/advisories/TA-200303.html">http://www.tripbit.org/advisories/TA-250503.html</a></font><font color="#333333" size="2" face="Arial, Helvetica, sans-serif"><br>
         </font></div></td>
